Run prettier on everything

--- a/spec/data/d19a_coarri_s.html
+++ b/spec/data/d19a_coarri_s.html
@@ -1,12 +1,65 @@
-
 <!-- saved from url=(0061)https://service.unece.org/trade/untdid/d19a/trmd/coarri_c.htm -->
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<meta http-equiv="Author" content="Claudio Meza, e-Business Team">
-<meta http-equiv="Description" content="United Nations EDIFACT Directories on the WWW">
-<meta http-equiv="Keywords" content="EDI, e-commerce, e-business, UN/EDIFACT, UN/CEFACT UN/ECE, ECE, UNECE, CEFACT, XML,  United Nations,  Economic Commission for Europe, United Nations Directories for Administration, Commerce and Transport">
-<title>UN/EDIFACT D.19A - Message [COARRI]</title>
-<script data-dapp-detection="">!function(){let e=!1;function n(){if(!e){const n=document.createElement("meta");n.name="dapp-detected",document.head.appendChild(n),e=!0}}if(window.hasOwnProperty("ethereum")){if(window.__disableDappDetectionInsertion=!0,void 0===window.ethereum)return;n()}else{var t=window.ethereum;Object.defineProperty(window,"ethereum",{configurable:!0,enumerable:!1,set:function(e){window.__disableDappDetectionInsertion||n(),t=e},get:function(){if(!window.__disableDappDetectionInsertion){const e=arguments.callee;e&&e.caller&&e.caller.toString&&-1!==e.caller.toString().indexOf("getOwnPropertyNames")||n()}return t}})}}();</script></head>
-<body><pre>
+<html>
+    <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+        <meta http-equiv="Author" content="Claudio Meza, e-Business Team" />
+        <meta
+            http-equiv="Description"
+            content="United Nations EDIFACT Directories on the WWW"
+        />
+        <meta
+            http-equiv="Keywords"
+            content="EDI, e-commerce, e-business, UN/EDIFACT, UN/CEFACT UN/ECE, ECE, UNECE, CEFACT, XML,  United Nations,  Economic Commission for Europe, United Nations Directories for Administration, Commerce and Transport"
+        />
+        <title>UN/EDIFACT D.19A - Message [COARRI]</title>
+        <script data-dapp-detection="">
+            !(function () {
+                let e = !1;
+                function n() {
+                    if (!e) {
+                        const n = document.createElement('meta');
+                        (n.name = 'dapp-detected'),
+                            document.head.appendChild(n),
+                            (e = !0);
+                    }
+                }
+                if (window.hasOwnProperty('ethereum')) {
+                    if (
+                        ((window.__disableDappDetectionInsertion = !0),
+                        void 0 === window.ethereum)
+                    )
+                        return;
+                    n();
+                } else {
+                    var t = window.ethereum;
+                    Object.defineProperty(window, 'ethereum', {
+                        configurable: !0,
+                        enumerable: !1,
+                        set: function (e) {
+                            window.__disableDappDetectionInsertion || n(),
+                                (t = e);
+                        },
+                        get: function () {
+                            if (!window.__disableDappDetectionInsertion) {
+                                const e = arguments.callee;
+                                (e &&
+                                    e.caller &&
+                                    e.caller.toString &&
+                                    -1 !==
+                                        e.caller
+                                            .toString()
+                                            .indexOf('getOwnPropertyNames')) ||
+                                    n();
+                            }
+                            return t;
+                        }
+                    });
+                }
+            })();
+        </script>
+    </head>
+    <body>
+        <pre>
 <table width="460" border="0"><tbody><tr><td align="center" valign="top">&nbsp;<br>
     <font size="+1" color="003399" face="Arial, Helvetica, Geneva, Futura"><b>
     United Nations Directories <br>for Electronic Data Interchange for<br>
@@ -628,4 +681,6 @@ Pos     Tag Name                                     S   R
     </p><center><font face="arial, Helvetica" size="-1" color="#003399"><a href="http://live.unece.org/legal_notice/copyrightnotice.html">Copyright United Nations,</a> all rights reserved <br> &nbsp;<br> <a href="http://www.unece.org/"> UN Economic Commission for Europe</a><br> Palais des Nations, CH-1211 Geneva 10, Switzerland <br> Tel: +41-22 917 1366 Fax: +41-22 917 0037  E-mail: <a href="mailto:TradeMaster@unece.org">TradeMaster@unece.org</a><br>&nbsp;<br><a href="http://www.unece.org/trade/untdid/welcome.htm">UN/EDIFACT Directories</a></font></center>
 
 
-</pre></body></html>
+</pre>
+    </body>
+</html>
