--- a/spec/data/d99a_invoic_s.html
+++ b/spec/data/d99a_invoic_s.html
@@ -1,9 +1,57 @@
-
 <!-- saved from url=(0061)https://service.unece.org/trade/untdid/d99a/trmd/invoic_s.htm -->
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<!-- --- This document was created by Viorel Iordache - UN/ECE ------->
-<title>UNTDID - D.99A Segment Table of INVOIC</title><script data-dapp-detection="">!function(){let e=!1;function n(){if(!e){const n=document.createElement("meta");n.name="dapp-detected",document.head.appendChild(n),e=!0}}if(window.hasOwnProperty("ethereum")){if(window.__disableDappDetectionInsertion=!0,void 0===window.ethereum)return;n()}else{var t=window.ethereum;Object.defineProperty(window,"ethereum",{configurable:!0,enumerable:!1,set:function(e){window.__disableDappDetectionInsertion||n(),t=e},get:function(){if(!window.__disableDappDetectionInsertion){const e=arguments.callee;e&&e.caller&&e.caller.toString&&-1!==e.caller.toString().indexOf("getOwnPropertyNames")||n()}return t}})}}();</script></head>
-<body bgcolor="ffffff"><pre>
+<html>
+    <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+        <!-- --- This document was created by Viorel Iordache - UN/ECE ------->
+        <title>UNTDID - D.99A Segment Table of INVOIC</title>
+        <script data-dapp-detection="">
+            !(function () {
+                let e = !1;
+                function n() {
+                    if (!e) {
+                        const n = document.createElement('meta');
+                        (n.name = 'dapp-detected'),
+                            document.head.appendChild(n),
+                            (e = !0);
+                    }
+                }
+                if (window.hasOwnProperty('ethereum')) {
+                    if (
+                        ((window.__disableDappDetectionInsertion = !0),
+                        void 0 === window.ethereum)
+                    )
+                        return;
+                    n();
+                } else {
+                    var t = window.ethereum;
+                    Object.defineProperty(window, 'ethereum', {
+                        configurable: !0,
+                        enumerable: !1,
+                        set: function (e) {
+                            window.__disableDappDetectionInsertion || n(),
+                                (t = e);
+                        },
+                        get: function () {
+                            if (!window.__disableDappDetectionInsertion) {
+                                const e = arguments.callee;
+                                (e &&
+                                    e.caller &&
+                                    e.caller.toString &&
+                                    -1 !==
+                                        e.caller
+                                            .toString()
+                                            .indexOf('getOwnPropertyNames')) ||
+                                    n();
+                            }
+                            return t;
+                        }
+                    });
+                }
+            })();
+        </script>
+    </head>
+    <body bgcolor="ffffff">
+        <pre>
 We recommend to view this page using <a href="https://service.unece.org/trade/untdid/texts/linedraw.zip">MS LineDraw</a> as fixed font in your browsers' preferences
 
 <b>4.3   Message structure</b>
@@ -304,5 +352,5 @@ Pos   Tag Name                                 S   R</b>
 <hr>
 <a href="https://service.unece.org/trade/untdid/d99a/trmd/invoic_c.htm">Contents of INVOIC</a>
 </pre>
-
-</body></html>
+    </body>
+</html>
