--- a/spec/data/d19a_coarri_s.html
+++ b/spec/data/d19a_coarri_s.html
@@ -1,65 +1,59 @@
 <!-- saved from url=(0061)https://service.unece.org/trade/untdid/d19a/trmd/coarri_c.htm -->
 <html>
-    <head>
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <meta http-equiv="Author" content="Claudio Meza, e-Business Team" />
-        <meta
-            http-equiv="Description"
-            content="United Nations EDIFACT Directories on the WWW"
-        />
-        <meta
-            http-equiv="Keywords"
-            content="EDI, e-commerce, e-business, UN/EDIFACT, UN/CEFACT UN/ECE, ECE, UNECE, CEFACT, XML,  United Nations,  Economic Commission for Europe, United Nations Directories for Administration, Commerce and Transport"
-        />
-        <title>UN/EDIFACT D.19A - Message [COARRI]</title>
-        <script data-dapp-detection="">
-            !(function () {
-                let e = !1;
-                function n() {
-                    if (!e) {
-                        const n = document.createElement('meta');
-                        (n.name = 'dapp-detected'),
-                            document.head.appendChild(n),
-                            (e = !0);
-                    }
-                }
-                if (window.hasOwnProperty('ethereum')) {
-                    if (
-                        ((window.__disableDappDetectionInsertion = !0),
-                        void 0 === window.ethereum)
-                    )
-                        return;
-                    n();
-                } else {
-                    var t = window.ethereum;
-                    Object.defineProperty(window, 'ethereum', {
-                        configurable: !0,
-                        enumerable: !1,
-                        set: function (e) {
-                            window.__disableDappDetectionInsertion || n(),
-                                (t = e);
-                        },
-                        get: function () {
-                            if (!window.__disableDappDetectionInsertion) {
-                                const e = arguments.callee;
-                                (e &&
-                                    e.caller &&
-                                    e.caller.toString &&
-                                    -1 !==
-                                        e.caller
-                                            .toString()
-                                            .indexOf('getOwnPropertyNames')) ||
-                                    n();
-                            }
-                            return t;
-                        }
-                    });
-                }
-            })();
-        </script>
-    </head>
-    <body>
-        <pre>
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta http-equiv="Author" content="Claudio Meza, e-Business Team" />
+    <meta
+      http-equiv="Description"
+      content="United Nations EDIFACT Directories on the WWW"
+    />
+    <meta
+      http-equiv="Keywords"
+      content="EDI, e-commerce, e-business, UN/EDIFACT, UN/CEFACT UN/ECE, ECE, UNECE, CEFACT, XML,  United Nations,  Economic Commission for Europe, United Nations Directories for Administration, Commerce and Transport"
+    />
+    <title>UN/EDIFACT D.19A - Message [COARRI]</title>
+    <script data-dapp-detection="">
+      !(function () {
+        let e = !1
+        function n() {
+          if (!e) {
+            const n = document.createElement('meta')
+            ;(n.name = 'dapp-detected'), document.head.appendChild(n), (e = !0)
+          }
+        }
+        if (window.hasOwnProperty('ethereum')) {
+          if (
+            ((window.__disableDappDetectionInsertion = !0),
+            void 0 === window.ethereum)
+          )
+            return
+          n()
+        } else {
+          var t = window.ethereum
+          Object.defineProperty(window, 'ethereum', {
+            configurable: !0,
+            enumerable: !1,
+            set: function (e) {
+              window.__disableDappDetectionInsertion || n(), (t = e)
+            },
+            get: function () {
+              if (!window.__disableDappDetectionInsertion) {
+                const e = arguments.callee
+                ;(e &&
+                  e.caller &&
+                  e.caller.toString &&
+                  -1 !== e.caller.toString().indexOf('getOwnPropertyNames')) ||
+                  n()
+              }
+              return t
+            },
+          })
+        }
+      })()
+    </script>
+  </head>
+  <body>
+    <pre>
 <table width="460" border="0"><tbody><tr><td align="center" valign="top">&nbsp;<br>
     <font size="+1" color="003399" face="Arial, Helvetica, Geneva, Futura"><b>
     United Nations Directories <br>for Electronic Data Interchange for<br>
@@ -682,5 +676,5 @@ Pos     Tag Name                                     S   R
 
 
 </pre>
-    </body>
+  </body>
 </html>
